--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.mycompany</groupId>
-  <artifactId>camel-ose-springboot-xml</artifactId>
+  <groupId>com.redhat.fuse.sample</groupId>
+  <artifactId>testfuse</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <name>Fabric8 :: Quickstarts :: Spring-Boot :: Camel XML</name>
   <description>Spring Boot example running a Camel route defined in XML</description>
