--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,7 +32,7 @@ camel:
 # lets listen on all ports to ensure we can be invoked from the pod ip address
 server:
   address: 0.0.0.0
-  port: 8080
+#  port: 8080
 
 # lets use a different management port in case you need to listen to HTTP requests on 8080
 management:
@@ -42,7 +42,7 @@ management:
       probes:
         enabled: true
   server:
-    port: 8081
+  #  port: 8081
     address: 0.0.0.0
   endpoints:
     enabled-by-default: true
